[package]
name = "pi-cooler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.18", features = ["full"] }
lazy_static = "1.4.0"
prometheus-client = "0.16.0"
rppal = "0.13.1"
tokio = { version = "1.18.2", features = ["full"] }
